--- a/style.css
+++ b/style.css
@@ -1,3 +1,128 @@
 body {
-    color: red;
+    font-family: 'Inter', sans-serif;
+    margin: 0;
+    text-align: center;
+    font-weight: normal;
+}
+
+section {
+    margin-bottom: 100px;
+}
+
+.header {
+    width: 100%;
+    background-image:
+        linear-gradient(to bottom, rgba(249, 249, 252, 0), rgba(29, 29, 31, 0.8)),
+        url('images/donation0.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: white;
+    padding-top: 200px;
+    padding-bottom: 200px;
+}
+
+.header h1 {
+    font-weight: bolder;
+}
+
+.donate-button {
+    text-decoration: none;
+    background-color: tomato;
+    padding: 10px 30px;
+    color: white;
+    border-radius: 5px;
+    margin-top: 30px;
+}
+
+.donate-today,
+.update {
+    width: 60%;
+    margin-left: 20%;
+}
+
+.donation-amount {
+    margin: 50px;
+}
+
+.donation-amount a {
+    text-decoration: none;
+    color: gray;
+    padding: 30px 20px;
+    margin: 10px;
+    background-color: antiquewhite;
+    border: 2px solid antiquewhite;
+    border-radius: 5px;
+}
+
+.donation-amount a:hover {
+    color: tomato;
+    border: 2px solid tomato;
+    background-color: rgba(255, 99, 71, 0.151);
+}
+
+input {
+    width: 100%;
+    border: none;
+    border-bottom: 1px solid gray;
+    text-align: center;
+    padding: 10px;
+}
+
+.donation-plan {
+    width: 80%;
+    margin-left: 10%;
+}
+
+.donation-type {
+    display: flex;
+    text-align: left;
+}
+
+.box {
+    padding: 40px 15px;
+    width: 30%;
+    margin: 10px;
+}
+
+.food {
+    background-color: rgba(176, 224, 230, 0.541);
+}
+
+.shelter {
+    background-color: antiquewhite;
+}
+
+.education {
+    background-color: azure
+}
+
+input[type=email] {
+    width: 50%;
+    border: none;
+    text-align: center;
+    padding: 12px;
+    text-align: left;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+}
+
+.subscribe-box {
+    background-color: rgba(240, 240, 175, 0.808);
+    padding: 50px 0;
+}
+
+.subscribe-button {
+    text-decoration: none;
+    background-color: tomato;
+    padding: 10px 20px;
+    color: white;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
+footer {
+    background-color: black;
+    color: aliceblue;
+    padding: 20px;
+
 }
